options: fix page in dark mode

--- a/extension/base/browser/options/options.css
+++ b/extension/base/browser/options/options.css
@@ -1,19 +1,34 @@
+/* Default / Light Mode */
+:root {
+  --bg-color: #ffffff;
+  --bg-close-color: #f0f0f0;
+  --text-color: #111111;
+}
+
+/* Dark Mode */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: #1e1e1e; /* or #121212 */
+    --bg-close-color: #2e2e2e;
+    --text-color: #f0f0f0;
+  }
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
     sans-serif;
   font-size: 14px;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 h2 {
-  color: #000;
   text-align: center;
   font-size: 2em;
 }
 h3 {
-  color: #000;
   padding: 0px 0px;
 }
 h4 {
-  color: #000;
   padding: 0px 0px;
   margin: 10px 0px;
 }
@@ -34,7 +49,6 @@ h4 {
   border-radius: 3px 3px 0px 0px;
 }
 .panels {
-  background: #fffffff6;
   min-height: 200px;
   width: 100%;
   border-radius: 3px;
@@ -73,7 +87,6 @@ h4 {
   font-weight: bold;
 }
 .subsectionsContainer {
-  background: #fffffff6;
   min-height: 200px;
   width: 100%;
   border-radius: 0px 3px 3px 3px;
@@ -121,26 +134,6 @@ h4 {
   display: inline-block;
 }
 
-/* save button */
-.saveButton {
-  background-color: #25422d;
-  border-radius: 10px;
-  display: inline-block;
-  cursor: pointer;
-  color: #f5f6f5;
-  font-size: 20px;
-  padding: 16px 31px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #2f6627;
-}
-.saveButton:hover {
-  background-color: #8fc642;
-}
-.saveButton:active {
-  position: relative;
-  top: 1px;
-}
-
 .topbar {
   min-height: 70px;
   display: flex;
@@ -154,9 +147,7 @@ h4 {
   width: 25px;
   height: 3px;
   margin: 5px auto;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  background-color: black;
+  background-color: var(--text-color);
 }
 
 .hamburgerButtonContainer {
@@ -168,7 +159,7 @@ h4 {
 .hamburgerButton {
   padding: 0;
   display: block;
-  background-color: white;
+  background-color: var(--bg-color);
   border: 0px;
   cursor: pointer;
 }
@@ -218,27 +209,28 @@ ul.buttonTextList li.comment {
 /* popup menu button */
 .popupMenuButton {
   text-align: left;
-  background-color: #cfcfcf;
+  background-color: var(--bg-color);
   border-radius: 0px;
   border-width: 0px;
   border-top: 1px solid #bbb;
   display: inline-block;
   cursor: pointer;
-  color: black;
-  background-color: white;
+  color: var(--text-color);
   font-size: 14px;
   padding: 10px 10px;
   width: 100%;
 }
 .popupMenuButton:hover {
   background-color: #e1f0b4;
+  color: black;
 }
 .popupMenuButton:active {
   background-color: #c1d084;
+  color: black;
 }
 
 dialog {
-  border: 1px solid black;
+  border: 1px solid var(--text-color);
   width: 700px;
   max-width: 100%;
   padding: 0px;
@@ -247,6 +239,7 @@ dialog {
 .dialogHeader {
   padding: 10px;
   background: #ffe270;
+  color: black;
   font-weight: bold;
 }
 
@@ -266,12 +259,12 @@ dialog::backdrop {
   padding: 0;
   margin: 0px;
 
-  border: 1px solid black;
+  border: 1px solid var(--text-color);
   max-width: 400px;
 }
 
 li.draggableListItem {
-  background-color: #f0f0f0;
+  background-color: var(--bg-close-color);
   padding: 3px;
   margin: 3px;
   cursor: grab;
@@ -286,7 +279,8 @@ li.draggableListItem > label {
 }
 
 .beingDragged {
-  color: #a0a0a0;
+  color: var(--text-color);
+  background-color: var(--bg-close-color);
 }
 
 .draggableIconBar {
@@ -296,7 +290,7 @@ li.draggableListItem > label {
   margin: 3px auto;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  background-color: black;
+  background-color: var(--text-color);
 }
 
 .draggableIconContainer {
@@ -308,7 +302,7 @@ li.draggableListItem > label {
 .draggableIcon {
   padding: 0;
   display: block;
-  background-color: #f0f0f0;
+  background-color: var(--bg-close-color);
   border: 0px;
   cursor: grab;
 }
